<resources>
<<<<<<< HEAD
    <string name="app_name">finalfinal_diary</string>
=======
    <string name="app_name">My Application</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="diarylist">DiaryList</string>
    <string name="friend">Friend</string>
    <string name="setting">Setting</string>
    <string name="content">내용</string>
    <string name="dummydate">0월0일</string>
    <string name="diarylistTitle">Diary List</string>
    <string name="delete">삭제</string>
    <string name="save">저장</string>
    <string name="story">내용</string>
    <string name="todaydate">20OO년O월O일</string>
    <string name="todaydiary">오늘의 일기</string>
>>>>>>> f7e8ff9a928f857affcfe738718e9fd821e7bc86
</resources>