<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/tab1"
        android:title="@string/main"
        android:enabled="true"
        android:visible="true"
        tools:icon="@drawable/baseline_home_24" />
    <item
        android:id="@+id/tab2"
        android:title="@string/diarylist"
        android:enabled="true"
        android:visible="true"
        tools:icon="@drawable/baseline_list_24" />
    <item
        android:id="@+id/tab3"
        android:title="@string/friend"
        android:enabled="true"
        android:visible="true"
        tools:icon="@drawable/baseline_people_24" />
    <item
        android:id="@+id/tab4"
        android:title="@string/setting"
        android:enabled="true"
        android:visible="true"
        tools:icon="@drawable/baseline_settings_24" />
</menu>
